hphp/hack/test/typecheck/reactive/mayberx13.php.like_types.exp
File "mayberx13.php", line 9, characters 12-15:
Reactive functions can only call other reactive functions. (Typing[4200])
  File "mayberx13.php", line 8, characters 41-57:
  This function is normal.
